banner and other comments rectified

--- a/CentralTendencyAndOutliers/CC-66-Effect_Of_Ouliers_On_Central_Tendency.ipynb
+++ b/CentralTendencyAndOutliers/CC-66-Effect_Of_Ouliers_On_Central_Tendency.ipynb
@@ -389,7 +389,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e0fdb5991214a6eb85e1d9246e91c6a",
+       "model_id": "bf1ecc078ca94090a1d70fefb2d44577",
        "version_major": 2,
        "version_minor": 0
       },
@@ -454,7 +454,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "320c797cdc064c2d920f951ba9a49cdd",
+       "model_id": "bc5b71faf5f1458799e399f7832e7c65",
        "version_major": 2,
        "version_minor": 0
       },
@@ -519,10 +519,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number(s) of Outlier : 2\n",
-      "Outlier 1: 5555\n",
-      "Outlier 2: -123\n",
-      "Dataset with outliers (last 2 entries were added) :  [190, 205, 250, 270, 290, 335, 340, 340, 355, 360, 380, 410, 450, 458, 460, 482, 510, 521, 530, 547, 590, 595, 600, 780, 843, 871, 1036, 1250, 5555, -123]\n"
+      "Number(s) of Outlier : 1\n",
+      "Outlier 1: 23232\n",
+      "Dataset with outlier (last 1 entry was added) :  [190, 205, 250, 270, 290, 335, 340, 340, 355, 360, 380, 410, 450, 458, 460, 482, 510, 521, 530, 547, 590, 595, 600, 780, 843, 871, 1036, 1250, 23232]\n"
      ]
     }
    ],
@@ -558,8 +557,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean:  656.0\n",
-      "Median:  459.0\n",
+      "Mean:  1292.414\n",
+      "Median:  460.0\n",
       "Mode: 340 (appeared 2 times.)\n"
      ]
     }
@@ -587,7 +586,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "870dcdb2988f4b2e97c9f3e2fff34354",
+       "model_id": "86f7d456fff640a8ae8eb33b492c271b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -650,8 +649,8 @@
      "text": [
       "Central Tendency  Before adding outlier  After adding outlier \n",
       "----------------- ---------------------- ---------------------\n",
-      "             Mean                508.857                 656.0\n",
-      "           Median                  459.0                 459.0\n",
+      "             Mean                508.857              1292.414\n",
+      "           Median                  459.0                 460.0\n",
       "             Mode                  340.0                 340.0\n"
      ]
     }
@@ -688,7 +687,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dfd6ba52b72747778918faaa5bd5693a",
+       "model_id": "9fa949ea3fc34717a2426ce9a2f33ad9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -780,7 +779,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "adeb4abc6ddc4947b2fa76e3995b5f6b",
+       "model_id": "72852b1320ea448a8358a1fb52f502a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -926,7 +925,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1db56b5cae2c47af9b368f1489ba81f6",
+       "model_id": "00eda761d10d4371a1ba45d5cc8bb514",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1091,7 +1090,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd2ef3fcfd0d4316b31fffc48d1e1e33",
+       "model_id": "ab15282a588540f3bddcabde63fc8c40",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1278,7 +1277,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0dabe08ef9e7461c8913c105d2aebffd",
+       "model_id": "b1378f7a4c1b46638e0cb71d0766f10b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1437,7 +1436,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58f157f944914ff2a14fc89f923d7cf0",
+       "model_id": "fef21b3b47d440b5b4bfc7930de82594",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1608,7 +1607,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7a6f44a37194a9c81784756f740dbec",
+       "model_id": "92c904552c31461fa946271dcd49a057",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1765,7 +1764,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e852c85c363f4218b100ae5999be4ef7",
+       "model_id": "1813385bb4804c1090b6627e7d6471b9",
        "version_major": 2,
        "version_minor": 0
       },
