--- a/CentralTendencyAndOutliers/CC65-Central_Tendency.ipynb
+++ b/CentralTendencyAndOutliers/CC65-Central_Tendency.ipynb
@@ -102,8 +102,9 @@
     "\n",
     "This notebook is organized as follows.\n",
     "* In Section 1, we discuss the preliminaries, definition of mean, median and mode.  \n",
-    "* In Section 2, students can play with these statistics using an interactive bar graph.\n",
-    "* In Section 3, students will find some exercises they can use to check their understanding.\n",
+    "* Section 2 presents an interactive bar graph so that students can play with central tendency. \n",
+    "* In Section 3, students will find a real time application of mean, median and mode.\n",
+    "* Section 4 concludes the notebook with exercises for students.\n",
     "\n",
     "##  1 Preliminaries \n",
     "### 1.1 What do we mean about the 'mean'?\n",
@@ -209,17 +210,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Collecting geogebra from git+git://github.com/callysto/nbplus.git#egg=geogebra&subdirectory=geogebra\n",
-      "  Cloning git://github.com/callysto/nbplus.git to /tmp/pip-install-xp6o5m6h/geogebra\n",
+      "  Cloning git://github.com/callysto/nbplus.git to /tmp/pip-install-hoa43bg3/geogebra\n",
       "Building wheels for collected packages: geogebra\n",
       "  Running setup.py bdist_wheel for geogebra ... \u001b[?25ldone\n",
-      "\u001b[?25h  Stored in directory: /tmp/pip-ephem-wheel-cache-n094huu5/wheels/cd/8f/54/42a9349ed6e488bb120c4c182ad6aa4f19e86061fe875bf3c5\n",
+      "\u001b[?25h  Stored in directory: /tmp/pip-ephem-wheel-cache-rmwp1ml3/wheels/cd/8f/54/42a9349ed6e488bb120c4c182ad6aa4f19e86061fe875bf3c5\n",
       "Successfully built geogebra\n",
       "Installing collected packages: geogebra\n",
       "  Found existing installation: geogebra 0.0.0\n",
@@ -235,9 +238,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -286,7 +289,7 @@
     }
    ],
    "source": [
-    "from geogebra.ggb import *\n",
+    "from geogebra import *\n",
     "ggb = GGB()\n",
     "ggb.file('CC65_materials/centralTendency.ggb').draw()"
    ]
@@ -306,10 +309,10 @@
    "source": [
     "## <font color='Blue'>  Section 3 </font> \n",
     "## Example Using Python Library \n",
-    "In this section we compute the central tendency of pandas dataframe. We use **nba_2013.csv** file as dataset that contains $30$ different criteria of $480$ nba players of 2013.\n",
+    "In the previous sections we discussed definitions, some basic examples, and then represented the concept with a bar graph. Now we provide a real-life example of the central tendency. Here, we consider the pandas dataframe in Python computer language. A Data frame is a process where the data is aligned in a tabular fashion in rows and columns. To compute the central tendency of NBA players we use **nba_2013.csv** file as a dataset that contains $30$ different criteria of $480$ NBA players of 2013. We want to extend our learning by observing the mean, median, and mode of players in various categories. \n",
     "\n",
-    "First, we read the csv file and then display a portion of the file. Here, **mp** stands for Minutes Played\n",
-    ", **drb and trb** represent Defensive Rebound Percentage and Total Rebound Percentage and so on.  Moreover, you may visit [Basketball Statistics](https://en.wikipedia.org/wiki/Basketball_statistics) for other colunm name. "
+    "First, we read the CSV file and then display a portion of the data. Here, the category name **mp** stands for Minutes Played\n",
+    ", **drb and trb** represent Defensive Rebound Percentage and Total Rebound Percentage, respectively.  Moreover, you may visit [Basketball Statistics](https://en.wikipedia.org/wiki/Basketball_statistics) for other colunm name. "
    ]
   },
   {
@@ -387,7 +390,7 @@
    "metadata": {},
    "source": [
     "###  3.1 Mean\n",
-    "Here, we determine the mean for first ten columns."
+    "Here, we determine the mean for the first ten columns. Due to space constraints, we did not show all columns here."
    ]
   },
   {
@@ -427,7 +430,7 @@
    "metadata": {},
    "source": [
     "###  3.2 Midean\n",
-    "Similarly, "
+    "Similarly, we show the median of first ten columns."
    ]
   },
   {
@@ -465,7 +468,7 @@
    "metadata": {},
    "source": [
     "###  3.3 Mode\n",
-    "''"
+    "Finally, we show the mode of five players. Here, maximum columns value are written as **NaN**. A Null value is denoted by NaN that means it is not possible to determine the value for that column. "
    ]
   },
   {
@@ -545,7 +548,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bcdd1b51b03c4b2395adc04ccaf67503",
+       "model_id": "6f4a0aad9f5547c1ac017569423c1a28",
        "version_major": 2,
        "version_minor": 0
       },
@@ -691,7 +694,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "488a5f1386c74ed6aacfb118efacf70b",
+       "model_id": "d4f3557b56714e5db4ab3b12ffc75b31",
        "version_major": 2,
        "version_minor": 0
       },
@@ -841,7 +844,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c85f01ac2a04ec29713dfcf2f7d3919",
+       "model_id": "73ba00be3547475ba91ebf511d71594b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1003,7 +1006,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86670f247c7c45ca91101e0e922a4d1f",
+       "model_id": "9cee9aae47fe4b1d87d1b9f7ea6b8612",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1164,7 +1167,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "32f9042a4ed342b68bace610bd0639eb",
+       "model_id": "f3d44eb63dbd4b23b84bfe67f699295f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1338,7 +1341,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5b300c46c8344fa9a15fd5c1fb8d63f",
+       "model_id": "1ab76d4d9312466b8db5c9a5a74a1cc4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1493,7 +1496,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ddbb4ab194504a1990151fe400e804a4",
+       "model_id": "793cc5d9c30242fbb32aeb054ffbe2ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1643,7 +1646,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83dd286c9bc34883a50b1cc6c78c80b9",
+       "model_id": "c984ee1b9be3414492a260d38d07c46e",
        "version_major": 2,
        "version_minor": 0
       },
