Updated for video demo

--- a/Physics/LightAndOpticalSystems/light-and-optical-systems.ipynb
+++ b/Physics/LightAndOpticalSystems/light-and-optical-systems.ipynb
@@ -15,10 +15,14 @@
    "source": [
     "%%capture \n",
     "# These commands ensure that the proper packages are installed.\n",
-    "!pip install --user trimesh\n",
-    "!pip install --user pythreejs\n",
-    "!jupyter nbextension install --py --symlink --user pythreejs\n",
-    "!jupyter nbextension enable --py --user pythreejs"
+    "try:\n",
+    "    import trimesh\n",
+    "    import pythreejs\n",
+    "except:\n",
+    "    !pip install --user trimesh\n",
+    "    !pip install --user pythreejs\n",
+    "    !jupyter nbextension install --py --symlink --user pythreejs\n",
+    "    !jupyter nbextension enable --py --user pythreejs"
    ]
   },
   {
@@ -247,7 +251,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='images/Kohler_Illumination.svg'>"
+    "<img src='images/Kohler_Illumination.svg'>\n",
+    "<i>\n",
+    "This diagram shows the path of light rays at various places in K&ouml;hler illumination. Image by Zephyris <a href='https://creativecommons.org/licenses/by-sa/3.0'>CC BY-SA 3.0</a> or <a href='http://www.gnu.org/copyleft/fdl.html'>GFDL</a>, from Wikimedia Commons.\n",
+    "</i>"
    ]
   },
   {
@@ -827,7 +834,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4cc6109082a54092bd43a41e24b94cb8",
+       "model_id": "4fdfe46a787c4262a3095b8c9f4be628",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1167,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
