--- a/Mathematics/Reflections/reflections.ipynb
+++ b/Mathematics/Reflections/reflections.ipynb
@@ -9,28 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "\n",
-       "<script src=\"https://cdn.geogebra.org/apps/deployggb.js\"></script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
-    "\n",
-    "\n",
     "<script src=\"https://cdn.geogebra.org/apps/deployggb.js\"></script>"
    ]
   },
@@ -63,61 +46,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<div id=\"ggb-point\"></div>\n",
-       "\n",
-       "<script>\n",
-       "  var ggbApp = new GGBApplet({\n",
-       "      \"height\": 400,\n",
-       "      \"showToolBar\": false,\n",
-       "      \"showMenuBar\": false,\n",
-       "      \"showAlgebraInput\": false,\n",
-       "      \"showResetIcon\": true,\n",
-       "      \"enableLabelDrags\": false,\n",
-       "      \"enableRightClick\": false,\n",
-       "      \"enableShiftDragZoom\": true,\n",
-       "      \"useBrowserForJS\": false,\n",
-       "      \"filename\": \"geogebra/reflection-point.ggb\"\n",
-       "  }, 'ggb-point');\n",
-       "\n",
-       "  ggbApp.inject();\n",
-       "</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
-    "\n",
-    "<div id=\"ggb-point\"></div>\n",
-    "\n",
-    "<script>\n",
-    "  var ggbApp = new GGBApplet({\n",
-    "      \"height\": 400,\n",
-    "      \"showToolBar\": false,\n",
-    "      \"showMenuBar\": false,\n",
-    "      \"showAlgebraInput\": false,\n",
-    "      \"showResetIcon\": true,\n",
-    "      \"enableLabelDrags\": false,\n",
-    "      \"enableRightClick\": false,\n",
-    "      \"enableShiftDragZoom\": true,\n",
-    "      \"useBrowserForJS\": false,\n",
-    "      \"filename\": \"geogebra/reflection-point.ggb\"\n",
-    "  }, 'ggb-point');\n",
-    "\n",
-    "  ggbApp.inject();\n",
-    "</script>"
+    "<div id=\"ggb-point\"></div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%js\n",
+    "requirejs.config({\n",
+    "    paths: {\n",
+    "        ggb: \"//cdn.geogebra.org/apps/deployggb\"\n",
+    "    }\n",
+    "});\n",
+    "requirejs([\"ggb\"], () => {\n",
+    "    var ggbApp = new GGBApplet({\n",
+    "        \"height\": 400,\n",
+    "        \"showToolBar\": false,\n",
+    "        \"showMenuBar\": false,\n",
+    "        \"showAlgebraInput\": false,\n",
+    "        \"showResetIcon\": true,\n",
+    "        \"enableLabelDrags\": false,\n",
+    "        \"enableRightClick\": false,\n",
+    "        \"enableShiftDragZoom\": true,\n",
+    "        \"useBrowserForJS\": false,\n",
+    "        \"filename\": \"geogebra/reflection-point.ggb\"\n",
+    "    }, 'ggb-point');\n",
+    "    ggbApp.inject();\n",
+    "});"
    ]
   },
   {
@@ -160,61 +123,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<div id=\"ggb-exercise1\"></div>\n",
-       "\n",
-       "<script>\n",
-       "  var ggbApp = new GGBApplet({\n",
-       "      \"height\": 600,\n",
-       "      \"showToolBar\": false,\n",
-       "      \"showMenuBar\": false,\n",
-       "      \"showAlgebraInput\": false,\n",
-       "      \"showResetIcon\": true,\n",
-       "      \"enableLabelDrags\": false,\n",
-       "      \"enableShiftDragZoom\": true,\n",
-       "      \"enableRightClick\": false,\n",
-       "      \"useBrowserForJS\": false,\n",
-       "      \"filename\": \"geogebra/reflection-exercise1.ggb\"\n",
-       "  }, 'ggb-exercise1');\n",
-       "\n",
-       "  ggbApp.inject();\n",
-       "</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
-    "\n",
-    "<div id=\"ggb-exercise1\"></div>\n",
-    "\n",
-    "<script>\n",
-    "  var ggbApp = new GGBApplet({\n",
-    "      \"height\": 600,\n",
-    "      \"showToolBar\": false,\n",
-    "      \"showMenuBar\": false,\n",
-    "      \"showAlgebraInput\": false,\n",
-    "      \"showResetIcon\": true,\n",
-    "      \"enableLabelDrags\": false,\n",
-    "      \"enableShiftDragZoom\": true,\n",
-    "      \"enableRightClick\": false,\n",
-    "      \"useBrowserForJS\": false,\n",
-    "      \"filename\": \"geogebra/reflection-exercise1.ggb\"\n",
-    "  }, 'ggb-exercise1');\n",
-    "\n",
-    "  ggbApp.inject();\n",
-    "</script>"
+    "<div id=\"ggb-exercise1\"></div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%js\n",
+    "requirejs.config({\n",
+    "    paths: {\n",
+    "        ggb: \"//cdn.geogebra.org/apps/deployggb\"\n",
+    "    }\n",
+    "});\n",
+    "requirejs([\"ggb\"], () => {\n",
+    "    var ggbApp = new GGBApplet({\n",
+    "        \"height\": 600,\n",
+    "        \"showToolBar\": false,\n",
+    "        \"showMenuBar\": false,\n",
+    "        \"showAlgebraInput\": false,\n",
+    "        \"showResetIcon\": true,\n",
+    "        \"enableLabelDrags\": false,\n",
+    "        \"enableShiftDragZoom\": true,\n",
+    "        \"enableRightClick\": false,\n",
+    "        \"useBrowserForJS\": false,\n",
+    "        \"filename\": \"geogebra/reflection-exercise1.ggb\"\n",
+    "    }, 'ggb-exercise1');\n",
+    "    ggbApp.inject();\n",
+    "});"
    ]
   },
   {
@@ -279,61 +222,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<div id=\"ggb-slider1\"></div>\n",
-       "\n",
-       "<script>\n",
-       "  var ggbApp = new GGBApplet({\n",
-       "      \"height\": 600,\n",
-       "      \"showToolBar\": false,\n",
-       "      \"showMenuBar\": false,\n",
-       "      \"showAlgebraInput\": false,\n",
-       "      \"showResetIcon\": true,\n",
-       "      \"enableLabelDrags\": false,\n",
-       "      \"enableRightClick\": false,\n",
-       "      \"enableShiftDragZoom\": true,\n",
-       "      \"useBrowserForJS\": false,\n",
-       "      \"filename\": \"geogebra/reflection-slider1.ggb\"\n",
-       "  }, 'ggb-slider1');\n",
-       "\n",
-       "  ggbApp.inject();\n",
-       "</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "%%html\n",
-    "\n",
-    "<div id=\"ggb-slider1\"></div>\n",
-    "\n",
-    "<script>\n",
-    "  var ggbApp = new GGBApplet({\n",
-    "      \"height\": 600,\n",
-    "      \"showToolBar\": false,\n",
-    "      \"showMenuBar\": false,\n",
-    "      \"showAlgebraInput\": false,\n",
-    "      \"showResetIcon\": true,\n",
-    "      \"enableLabelDrags\": false,\n",
-    "      \"enableRightClick\": false,\n",
-    "      \"enableShiftDragZoom\": true,\n",
-    "      \"useBrowserForJS\": false,\n",
-    "      \"filename\": \"geogebra/reflection-slider1.ggb\"\n",
-    "  }, 'ggb-slider1');\n",
-    "\n",
-    "  ggbApp.inject();\n",
-    "</script>"
+    "<div id=\"ggb-slider1\"></div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%js\n",
+    "requirejs.config({\n",
+    "    paths: {\n",
+    "        ggb: \"//cdn.geogebra.org/apps/deployggb\"\n",
+    "    }\n",
+    "});\n",
+    "requirejs([\"ggb\"], () => {\n",
+    "    var ggbApp = new GGBApplet({\n",
+    "        \"height\": 600,\n",
+    "        \"showToolBar\": false,\n",
+    "        \"showMenuBar\": false,\n",
+    "        \"showAlgebraInput\": false,\n",
+    "        \"showResetIcon\": true,\n",
+    "        \"enableLabelDrags\": false,\n",
+    "        \"enableRightClick\": false,\n",
+    "        \"enableShiftDragZoom\": true,\n",
+    "        \"useBrowserForJS\": false,\n",
+    "        \"filename\": \"geogebra/reflection-slider1.ggb\"\n",
+    "    }, 'ggb-slider1');\n",
+    "    ggbApp.inject();\n",
+    "});"
    ]
   },
   {
@@ -356,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,42 +351,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<div id=\"ggb-interactive1\"></div>\n",
-       "\n",
-       "<script>\n",
-       "  var ggbApp = new GGBApplet({\n",
-       "      \"height\": 600,\n",
-       "      \"showToolBar\": false,\n",
-       "      \"showMenuBar\": false,\n",
-       "      \"showAlgebraInput\": false,\n",
-       "      \"showResetIcon\": true,\n",
-       "      \"enableLabelDrags\": true,\n",
-       "      \"enableShiftDragZoom\": true,\n",
-       "      \"enableRightClick\": false,\n",
-       "      \"useBrowserForJS\": false,\n",
-       "      \"filename\": \"geogebra/reflection-interactive1.ggb\"\n",
-       "  }, 'ggb-interactive1');\n",
-       "\n",
-       "  ggbApp.inject();\n",
-       "</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "\n",
@@ -511,40 +405,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<div id=\"ggb-exercise2\"></div>\n",
-       "\n",
-       "<script>\n",
-       "  var ggbApp = new GGBApplet({\n",
-       "      \"height\": 600,\n",
-       "      \"showToolBar\": false,\n",
-       "      \"showMenuBar\": false,\n",
-       "      \"showAlgebraInput\": false,\n",
-       "      \"showResetIcon\": true,\n",
-       "      \"enableLabelDrags\": false,\n",
-       "      \"enableShiftDragZoom\": true,\n",
-       "      \"enableRightClick\": false,\n",
-       "      \"useBrowserForJS\": false,\n",
-       "      \"filename\": \"geogebra/reflection-exercise2.ggb\"\n",
-       "  }, 'ggb-exercise2');\n",
-       "\n",
-       "  ggbApp.inject();\n",
-       "</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "%%html\n",
     "\n",
@@ -599,40 +464,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<div id=\"ggb-slider2\"></div>\n",
-       "\n",
-       "<script>\n",
-       "  var ggbApp = new GGBApplet({\n",
-       "      \"height\": 600,\n",
-       "      \"showToolBar\": false,\n",
-       "      \"showMenuBar\": false,\n",
-       "      \"showAlgebraInput\": false,\n",
-       "      \"showResetIcon\": true,\n",
-       "      \"enableLabelDrags\": false,\n",
-       "      \"enableShiftDragZoom\": true,\n",
-       "      \"enableRightClick\": false,\n",
-       "      \"useBrowserForJS\": false,\n",
-       "      \"filename\": \"geogebra/reflection-slider2.ggb\"\n",
-       "  }, 'ggb-slider2');\n",
-       "\n",
-       "  ggbApp.inject();\n",
-       "</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "\n",
@@ -699,42 +533,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<div id=\"ggb-interactive2\"></div>\n",
-       "\n",
-       "<script>\n",
-       "  var ggbApp = new GGBApplet({\n",
-       "      \"height\": 600,\n",
-       "      \"showToolBar\": false,\n",
-       "      \"showMenuBar\": false,\n",
-       "      \"showAlgebraInput\": false,\n",
-       "      \"showResetIcon\": true,\n",
-       "      \"enableLabelDrags\": true,\n",
-       "      \"enableShiftDragZoom\": true,\n",
-       "      \"enableRightClick\": false,\n",
-       "      \"useBrowserForJS\": false,\n",
-       "      \"filename\": \"geogebra/reflection-interactive2.ggb\"\n",
-       "  }, 'ggb-interactive2');\n",
-       "\n",
-       "  ggbApp.inject();\n",
-       "</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "\n",
@@ -791,40 +594,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<div id=\"ggb-point2\"></div>\n",
-       "\n",
-       "<script>\n",
-       "  var ggbApp = new GGBApplet({\n",
-       "      \"height\": 400,\n",
-       "      \"showToolBar\": false,\n",
-       "      \"showMenuBar\": false,\n",
-       "      \"showAlgebraInput\": false,\n",
-       "      \"showResetIcon\": true,\n",
-       "      \"enableLabelDrags\": false,\n",
-       "      \"enableShiftDragZoom\": true,\n",
-       "      \"enableRightClick\": false,\n",
-       "      \"useBrowserForJS\": false,\n",
-       "      \"filename\": \"geogebra/reflection-point2.ggb\"\n",
-       "  }, 'ggb-point2');\n",
-       "\n",
-       "  ggbApp.inject();\n",
-       "</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "\n",
@@ -936,40 +708,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<div id=\"ggb-exercise3\"></div>\n",
-       "\n",
-       "<script>\n",
-       "  var ggbApp = new GGBApplet({\n",
-       "      \"height\": 600,\n",
-       "      \"showToolBar\": false,\n",
-       "      \"showMenuBar\": false,\n",
-       "      \"showAlgebraInput\": false,\n",
-       "      \"showResetIcon\": true,\n",
-       "      \"enableLabelDrags\": false,\n",
-       "      \"enableShiftDragZoom\": true,\n",
-       "      \"enableRightClick\": false,\n",
-       "      \"useBrowserForJS\": false,\n",
-       "      \"filename\": \"geogebra/reflection-exercise3.ggb\"\n",
-       "  }, 'ggb-exercise3');\n",
-       "\n",
-       "  ggbApp.inject();\n",
-       "</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "\n",
@@ -1072,40 +813,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<div id=\"ggb-slider3\"></div>\n",
-       "\n",
-       "<script>\n",
-       "  var ggbApp = new GGBApplet({\n",
-       "      \"height\": 600,\n",
-       "      \"showToolBar\": false,\n",
-       "      \"showMenuBar\": false,\n",
-       "      \"showAlgebraInput\": false,\n",
-       "      \"showResetIcon\": true,\n",
-       "      \"enableLabelDrags\": false,\n",
-       "      \"enableShiftDragZoom\": true,\n",
-       "      \"enableRightClick\": false,\n",
-       "      \"useBrowserForJS\": false,\n",
-       "      \"filename\": \"geogebra/reflection-slider3.ggb\"\n",
-       "  }, 'ggb-slider3');\n",
-       "\n",
-       "  ggbApp.inject();\n",
-       "</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "\n",
@@ -1175,40 +885,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<div id=\"ggb-interactive3\"></div>\n",
-       "\n",
-       "<script>\n",
-       "  var ggbApp = new GGBApplet({\n",
-       "      \"height\": 600,\n",
-       "      \"showToolBar\": false,\n",
-       "      \"showMenuBar\": false,\n",
-       "      \"showAlgebraInput\": false,\n",
-       "      \"showResetIcon\": true,\n",
-       "      \"enableLabelDrags\": true,\n",
-       "      \"enableShiftDragZoom\": true,\n",
-       "      \"enableRightClick\": false,\n",
-       "      \"useBrowserForJS\": false,\n",
-       "      \"filename\": \"geogebra/reflection-interactive3.ggb\"\n",
-       "  }, 'ggb-interactive3');\n",
-       "\n",
-       "  ggbApp.inject();\n",
-       "</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "\n",
@@ -1357,35 +1036,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<script>\n",
-       "code_show=true; \n",
-       "function code_toggle() {\n",
-       " if (code_show){\n",
-       " $('div.input').hide();\n",
-       " } else {\n",
-       " $('div.input').show();\n",
-       " }\n",
-       " code_show = !code_show\n",
-       "} \n",
-       "$( document ).ready(code_toggle);\n",
-       "</script>\n",
-       "<form action=\"javascript:code_toggle()\"><input type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import HTML\n",
     "\n",
@@ -1428,7 +1081,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
