Minor corrections for grammar

--- a/Mathematics/CC143_Counting_Triangles/CC-143_Puzzle_Triangles_in_a_pentagon.ipynb
+++ b/Mathematics/CC143_Counting_Triangles/CC-143_Puzzle_Triangles_in_a_pentagon.ipynb
@@ -76,9 +76,9 @@
     "# Math Puzzle: Counting triangles\n",
     "In this notebook we explore two methods for counting the total number of triangles in a pentagon. \n",
     "<br> Organization of the notebook: \n",
-    " * In the next section, we discuss some preliminaries for the problem.\n",
+    " * Section 1 discusses some preliminaries for the problem.\n",
     " * Section 2 presents an animation of counting triangles in a pentagon.\n",
-    " * In Section 3, we present an alternate method to count triangles in a pentagon.\n",
+    " * Section 3 presents an alternate method for counting triangles in a pentagon.\n",
     " * Section 4 concludes the notebook with some exercises. "
    ]
   },
@@ -87,14 +87,14 @@
    "metadata": {},
    "source": [
     "## 1. Preliminaries\n",
-    "Let consider a pentagon $ABCDE.$ If we connect $B$ and $E$ then we can divide the pentagon into a triangle $ABE$ and a rectangle $BCDE$.<br>\n",
+    "Let's consider a pentagon $ABCDE.$ If we connect $B$ and $E$ then we can divide the pentagon into a triangle, $ABE$, and a rectangle, $BCDE$.<br>\n",
     "So, our preliminary discussion will be to count how many triangles we get as we divide the triangle and rectangle. \n",
     "![](CC143_materials/pentaExample.png)\n",
     "\n",
     "### 1.1. Triangles in a triangle\n",
-    "Let consider a triangle $ABC$. First, we draw a line $AD$ from $A$ to $BC$ as shown in the following figure. <br>\n",
+    "Let's consider a triangle $ABC$. First, we draw a line $AD$ from $A$ to $BC$ as shown in the following figure. <br>\n",
     "We can see that there are two triangles: $ABD$ and $ACD.$ <br>\n",
-    "Actually in this picture there are three different triangles, since we still count the triangle $ABC.$ \n",
+    "Actually in this picture there are three different triangles, since we still count the original triangle $ABC.$ \n",
     "![](CC143_materials/exm1.png)\n"
    ]
   },
@@ -149,7 +149,7 @@
     "To keep Gauss busy, the teacher asked him to add up the numbers from 1 to 100.<br>\n",
     "In a matter of minutes, Gauss discovered the formula, determined the answer (which is $\\dfrac{100\\times 101}{2}=5050$), and went back to annoying his teacher.\n",
     "\n",
-    "For better understanding consider the following animation. Change the slider value of $n$ and observe the counting of triangles. \n"
+    "For better understanding consider the following animation. Change the slider value of $n$ and observe how we count the triangles. \n"
    ]
   },
   {
@@ -187,7 +187,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Triangles in a pentagon  "
+    "## 2. Triangles in a pentagon  \n",
+    "\n",
+    "Now that we've seen how to count how many triangles we get when we draw lines in a larger triangle, and how to count triangles in a rectangle, we put the two together, and determine the number of triangles in a pentagon, as the next animation demonstrates."
    ]
   },
   {
@@ -215,7 +217,7 @@
     "The symmetry noted above tells us there are 5 triangles in each group. <br>\n",
     "So the total number of the triangles in the Pentagon is 7x5=35.\n",
     "\n",
-    "Let play the following animation to find the seven groups. The slider $n$ and $i$ are representing the number of groups and the number of triangles corresponding to a group, respectively."
+    "Let's play the following animation to find the seven groups. The sliders $n$ and $i$ represent the number of groups and the number of triangles corresponding to a group, respectively."
    ]
   },
   {
@@ -446,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
