Generates a list in html from data collected within notebooks

--- a/General/TESTING_NB_DELETE_ME.ipynb
+++ b/General/TESTING_NB_DELETE_ME.ipynb
@@ -22,7 +22,7 @@
    "name": "python3"
   },
    "notebookInfo" : {
-     "Title" : "Dummy",
+     "Title" : "A Notebook in General",
      "Grade" : "12",
      "Subject" : "General",
      "Description" : "A notebook to test data extraction",
