--- a/Technology/TESTING_NB_DELETE_ME-Copy1.ipynb
+++ b/Technology/TESTING_NB_DELETE_ME-Copy1.ipynb
@@ -38,7 +38,7 @@
    "Grade": "8",
    "Hyperlink": "https://Callysto.ca",
    "Subject": "Technology",
-   "Title": "Dummy in Technology"
+   "Title": "A Notebook in Technology"
   }
  },
  "nbformat": 4,
